--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1> I <img src="heart.png"> JAMStack</h1>
         <p>Share your thoughts or questions on this amazing architecture</p>
+
+        comments here
     </body>
 </html>
