--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
         <meta charset="utf-8" />
         <title>Simple JAM</title>
         <link href="style.css" rel="stylesheet">
-    </head>
+        </head>
     <body>
         <h1> I <img src="heart.png"> JAMStack</h1>
         <p>Share your thoughts or questions on this amazing architecture</p>
 
-        comments here
+        <div id="disqus_thread"></div>
+
+        <script>
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://simplejam-15.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    
+        <script id="dsq-count-scr" src="//simplejam-15.disqus.com/count.js" async></script>
     </body>
 </html>
