--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     
         <script id="dsq-count-scr" src="//simplejam-15.disqus.com/count.js" async></script>
+
+        <!-- Develop -->
     </body>
 </html>
