--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     
         <script id="dsq-count-scr" src="//simplejam-15.disqus.com/count.js" async></script>
 
-        <!-- Develop Update to master-->
+        <!-- Develop Update to master from develop-->
     </body>
 </html>
