--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     
         <script id="dsq-count-scr" src="//simplejam-15.disqus.com/count.js" async></script>
 
-        <!-- Develop First-->
+
+        <!-- Develop Update to master-->
+
     </body>
 </html>
